--- a/ReactApi/package.json
+++ b/ReactApi/package.json
@@ -8,10 +8,13 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.14.0",
     "axios": "0.20.0",
+    "font-awesome": "4.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "sweetalert": "2.1.2"
   },
   "devDependencies": {
     "typescript": "3.8.3"
