--- a/ReactApi/package.json
+++ b/ReactApi/package.json
@@ -9,6 +9,11 @@
   "main": "src/index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.14.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.30",
+    "@fortawesome/free-brands-svg-icons": "5.14.0",
+    "@fortawesome/free-regular-svg-icons": "5.14.0",
+    "@fortawesome/free-solid-svg-icons": "5.14.0",
+    "@fortawesome/react-fontawesome": "0.1.11",
     "axios": "0.20.0",
     "font-awesome": "4.7.0",
     "react": "16.12.0",
